@@ -137,6 +137,8 @@ Release 0.91.0 - Unreleased
                in a synchronized function (Liyin Tang via Stack)
    HBASE-3710  Book.xml - fill out descriptions of metrics
                (Doug Meil via Stack)
+   HBASE-3738  Book.xml - expanding Architecture Client section
+               (Doug Meil via Stack)
 
   TASK
    HBASE-3559  Move report of split to master OFF the heartbeat channel
